<resources>
    <string name="app_name">Chat App</string>
    <string name="login">Inicio de sesion</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="click_to_login">Click para iniciar sesion</string>
    <string name="click_to_register">Click para registrarse</string>
    <string name="logout">Cerrar Sesion</string>
    <string name="username">Nombre de Usuario</string>
    <string name="user">Usuario</string>
    <string name="chats">Chats</string>
    <string name="search">Buscar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mensaje_aqui">Escribe tu mensaje aqui</string>
    <!--    <string name="password">Password</string>-->
    <!--    <string name="password">Password</string>-->

</resources>