<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/teal"
        android:padding="10dp"
        android:id="@+id/toolbar">

        <ImageButton
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/search"
            android:src="@drawable/back_arrow"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/white"
            android:layout_centerVertical="true"
            android:id="@+id/back_btn"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/back_btn"
            android:layout_centerVertical="true"
            android:id="@+id/user2"/>

        <TextView
            android:id="@+id/user_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Estado"
            android:textSize="14sp"
            android:textColor="@color/white"
            android:layout_marginStart="8dp"
            android:layout_toEndOf="@id/user2"
            android:layout_centerVertical="true"/>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:layout_above="@id/bottom_layout"
        android:id="@+id/message_recycler_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:padding="8dp"
        android:id="@+id/bottom_layout">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mensaje_aqui"
            android:layout_centerInParent="true"
            android:layout_margin="10dp"
            android:background="@drawable/edit_text_rounded_corner"
            android:elevation="4dp"
            android:padding="10dp"
            android:layout_toStartOf="@id/message_send_btn"
            android:id="@+id/message_input"/>

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/send_icon"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:tint="@color/teal"
            android:id="@+id/message_send_btn"
            android:padding="8dp"
            android:layout_marginStart="10dp"/>

    </RelativeLayout>
</RelativeLayout>
